MosaicMVS.github.io

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="NeuralRecon reconstructs 3D scene geometry from a monocular video with known camera poses in real-time. Accepted in CVPR 2021 as oral."/>
-    <title>NeuralRecon: Real-Time Coherent 3D Reconstruction from Monocular Video</title>
+    <title>MosaicMVS: Mosaic-based Omnidirectional Multi-view Stereo for Indoor Scenes</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
@@ -24,9 +24,9 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h2 style="font-size:30px;">NeuralRecon: Real-Time Coherent 3D Reconstruction from Monocular Video</h2>
-            <h4 style="color:#6e6e6e;"> CVPR 2021</h4>
-            <h5 style="color:#6e6e6e;"> (Oral Presentation and Best Paper Candidate)</h5>
+            <h2 style="font-size:30px;">MosaicMVS: Mosaic-based Omnidirectional Multi-view Stereo for Indoor Scenes</h2>
+            <!-- <h4 style="color:#6e6e6e;"> CVPR 2021</h4>
+            <h5 style="color:#6e6e6e;"> (Oral Presentation and Best Paper Candidate)</h5> -->
             <hr>
             <h6> <a href="https://jiamingsun.ml/" target="_blank">Jiaming Sun</a><sup>1,2*</sup>, 
                  <a href="https://ymingxie.github.io/" target="_blank">Yiming Xie</a><sup>1*</sup>, 
