MosaicMVS.github.io

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2 style="font-size:30px;">MosaicMVS: Mosaic-based Omnidirectional Multi-view Stereo for Indoor Scenes</h2>
             <!-- <h4 style="color:#6e6e6e;"> CVPR 2021</h4>
             <h5 style="color:#6e6e6e;"> (Oral Presentation and Best Paper Candidate)</h5> -->
-            <hr>
+            <!-- <hr>
             <h6> <a href="https://jiamingsun.ml/" target="_blank">Jiaming Sun</a><sup>1,2*</sup>, 
                  <a href="https://ymingxie.github.io/" target="_blank">Yiming Xie</a><sup>1*</sup>, 
                  <!-- <a href="https://ymingxie.github.io/" target="_blank">Yiming Xie</a><sup>1,2*</sup>,  -->
@@ -37,7 +37,7 @@
             <p> <sup>1</sup>State Key Lab of CAD & CG, Zhejiang University &nbsp;&nbsp; 
                 <sup>2</sup>SenseTime Research
                 <br>
-                <sup>*</sup> denotes equal contribution
+                <sup>*</sup> denotes equal contribution -->
             </p>
             <!-- <p> <a class="btn btn-secondary btn-lg" href="" role="button">Paper</a> 
                 <a class="btn btn-secondary btn-lg" href="" role="button">Code</a> 
