--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <h6> <a href="https://jiamingsun.ml/" target="_blank">Jiaming Sun</a><sup>1,2*</sup>, 
                  <a href="https://ymingxie.github.io/" target="_blank">Yiming Xie</a><sup>1*</sup>, 
                  <!-- <a href="https://ymingxie.github.io/" target="_blank">Yiming Xie</a><sup>1,2*</sup>,  -->
-                <a href="https://github.com/f-sky" target="_blank">Linghao Chen</a><sup>1</sup>,
+                <!-- <a href="https://github.com/f-sky" target="_blank">Linghao Chen</a><sup>1</sup>,
                 <a href="http://xzhou.me" target="_blank">Xiaowei Zhou</a><sup>1</sup>,
                 <a href="http://www.cad.zju.edu.cn/bao/" target="_blank">Hujun Bao</a><sup>1</sup></h6>
             <p> <sup>1</sup>State Key Lab of CAD & CG, Zhejiang University &nbsp;&nbsp; 
                 <sup>2</sup>SenseTime Research
                 <br>
-                <sup>*</sup> denotes equal contribution -->
+                <sup>*</sup> denotes equal contribution --> -->
             </p>
             <!-- <p> <a class="btn btn-secondary btn-lg" href="" role="button">Paper</a> 
                 <a class="btn btn-secondary btn-lg" href="" role="button">Code</a> 
