--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <br>
                 <sup>*</sup> denotes equal contribution --> -->
             </p>
-            <!-- <p> <a class="btn btn-secondary btn-lg" href="" role="button">Paper</a> 
+            <p> <a class="btn btn-secondary btn-lg" href="" role="button">Paper</a> 
                 <a class="btn btn-secondary btn-lg" href="" role="button">Code</a> 
-                <a class="btn btn-secondary btn-lg" href="" role="button">Data</a> </p> -->
+                <a class="btn btn-secondary btn-lg" href="" role="button">Data</a> </p>
 
             <div class="row justify-content-center">
               <div class="column">
