--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <hr style="margin-top:0px">
             <div class="embed-responsive embed-responsive-16by9">
 
-                <iframe style="clip-path: inset(1px 1px)" width="100%" height="100%" src="https://sketchfab.com/playlists/embed?collection=5a49cab0570e4d9fb610978a640fe080&autostart=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                <iframe style="clip-path: inset(1px 1px)" width="100%" height="100%" src="https://sketchfab.com/playlists/embed?collection=5a49cab0570e4d9fb610978a640fe080&autostart=" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </div>
             <br>
             <p> Zoom in by scrolling. You can toggle the “Single Sided” option in Model Inspector (pressing I key) to enable back-face culling (see through walls). Select “Matcap” to inspect the geometry without textures.</p>
@@ -209,7 +209,7 @@
       </div>
     </div>
   </section>
-  <br> -->
+  <br>
 
 
   <!-- Pipeline overview -->
@@ -239,7 +239,7 @@
   <br>
 
   <!-- Comparison with state-of-the-art methods -->
-  <section>
+  <!-- <section>
     <div class="container">
       <div class="row">
         <div class="col-12 text-center">
@@ -262,7 +262,7 @@
   <br>
 
     <!-- Comparison with Atlas -->
-    <section>
+    <!-- <section>
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
@@ -274,8 +274,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <br>  
+    </section> -->
+    <br>   -->
 
   <!-- Comparison with depth-based methods -->
   <!-- <section>
