--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
   <section>
     <div class="container">
       <div class="row">
-        <div class="col-12 text-center">
+        <!-- <div class="col-12 text-center">
             <h3>Reconstruction showcases</h3>
-            <hr style="margin-top:0px">
+            <hr style="margin-top:0px"> -->
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe style="clip-path: inset(1px 1px)" width="100%" height="100%" src="https://sketchfab.com/playlists/embed?collection=5a49cab0570e4d9fb610978a640fe080&autostart=" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </div>
