--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <i class="fa fa-file"></i> Paper</a> </p>
               </div>
               <div class="column">
-                  <p class="mb-5"><a class="btn btn-large btn-light" id="code_soon" href="" role="button" target="_blank" disabled="disabled">
+                  <p class="mb-5"><a class="btn btn-large btn-light" id="code_soon" href="https://anonymous.4open.science/r/MosaicMVS-5EE6/" role="button" target="_blank" disabled="disabled">
                 <i class="fa fa-github-alt"></i> Code </a> </p>
               </div>
               <div class="column">
