--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                 <iframe style="clip-path: inset(1px 1px)" width="100%" height="100%" src="https://sketchfab.com/playlists/embed?collection=2e16bec6729b4c53b92ed8b674f70338&autostart=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </div>
             <br>
-            <p class="text-justify"> 
+            <p class="text-justify">
+              Poisson reconstructions with the depth maps produced via COLMAP.
               </p>
         </div>
       </div>
